--- a/vistas/login.html
+++ b/vistas/login.html
@@ -32,7 +32,7 @@
         <p class="login-box-msg">Ingrese sus datos de Acceso</p>
         <form method="post" id="frmAcceso">
           <div class="form-group has-feedback">
-            <input type="text" class="form-control" id="logina" name="logina" placeholder="Usuario">
+            <input type="text" class="form-control" id="usuarioa" name="usuarioa" placeholder="Usuario">
             <span class="fa fa-user form-control-feedback"></span>
           </div>
           <div class="form-group has-feedback">
