--- a/vistas/login.html
+++ b/vistas/login.html
@@ -22,6 +22,32 @@
         <script src="https://oss.maxcdn.com/html5shiv/3.7.3/html5shiv.min.js"></script>
         <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
     <![endif]-->
+    <style>
+        /* .container-fluid, .row{
+            height:100vh;
+        } */
+
+      .login-box{
+          border:0 solid black;
+          background-color: white;
+          border-radius:20px;
+          padding:5rem 2rem;
+          box-shadow: 0 10px 10px rgba(0, 0, 0, 0.2), 0px 0px 10px rgba(0, 0, 0, 0.2);
+          text-align:center;
+      }
+
+      .inputs{
+        padding: 2.5rem 1rem;
+        font-size: 2rem;
+      }
+
+      .spans{
+        height: 100%;
+        position: absolute;
+        top: 10px;
+      }
+
+  </style>
   </head>
   <body class="hold-transition login-page">
     <div class="login-box">
@@ -32,23 +58,23 @@
         <p class="login-box-msg">Ingrese sus datos de Acceso</p>
         <form method="post" id="frmAcceso">
           <div class="form-group has-feedback">
-            <input type="text" class="form-control" id="usuarioa" name="usuarioa" placeholder="Usuario">
-            <span class="fa fa-user form-control-feedback"></span>
+            <input type="text" class="form-control inputs" id="usuarioa" name="usuarioa" placeholder="Usuario">
+            <span class="fa fa-user form-control-feedback spans"></span>
           </div>
           <div class="form-group has-feedback">
-            <input type="password" id="clavea" name="clavea" class="form-control" placeholder="Password">
-            <span class="fa fa-key form-control-feedback"></span>
+            <input type="password" id="clavea" name="clavea" class="form-control inputs" placeholder="Password">
+            <span class="fa fa-key form-control-feedback spans"></span>
           </div>
-          <div class="row">
+          <div class="row" style="margin-top: 4rem; margin-bottom: 2rem;">
             <div class="col-xs-8">
 
             </div><!-- /.col -->
-            <div class="col-xs-4">
+            <div class="col-xs-12">
               <button type="submit" class="btn btn-primary btn-block btn-flat">Ingresar</button>
             </div><!-- /.col -->
           </div>
         </form>        
-        <a href="#">Olvidé mi password</a><br>
+        <a href="#" >Olvidé mi password</a><br>
       </div><!-- /.login-box-body -->
     </div><!-- /.login-box -->
 
